--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Spotify Clone with GraphQL and React",
   "main": "server/index.js",
   "scripts": {
+    "dev":"nodemon server/index.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,13 +19,18 @@
   "homepage": "https://github.com/jhonatan-fg/Spotify-clone#readme",
   "dependencies": {
     "apollo-server": "^2.9.16",
- "graphql": "^14.6.0",
+    "bcrypt": "^3.0.7",
+    "cloudinary": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.5.8",
     "graphql-import": "^0.7.1",
     "graphql-scalars": "^1.0.6",
-    "mongoose": "^5.8.10"
+    "graphql-tools": "^4.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "nodemon": "^2.0.2"
   }
 }
